# zero2prod

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: rust.yml
scripts/: init_pg.sh
src/: configuration.rs  lib.rs  main  main.rs  startup.rs  telemetry.rs  types.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: test_health_check.rs
