[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Abdullah Khurram <abdullah.k.vohra@gmail.com>"]
edition = "2024"

[dependencies]
axum = "0.8.9"
reqwest = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
tokio = {version = "1.52.3", features = ["full", "rt-multi-thread"]}
validator = { version = "0.20.0", features = ["derive"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
