[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Abdullah Khurram <abdullah.k.vohra@gmail.com>"]
edition = "2024"

[dependencies]
axum = "0.8.9"
config = "0.15.25"
reqwest = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono", "migrate", "macros"] }
tokio = {version = "1.52.3", features = ["full", "rt-multi-thread"]}
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["registry", "env-filter", "fmt"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tower-http = { version = "0.7.0", features = ["trace"] }
secrecy = { version = "0.10.3", features = ["serde"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
